--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "dependencies": {
   },
   "devDependencies": {
-    "webrtc-core": "git+ssh://git.broadsoftlabs.net:7922/wrtc/webrtc-core.git",
-    "webrtc-sound": "git+ssh://git.broadsoftlabs.net:7922/wrtc/webrtc-sound.git",
+    "webrtc-core": "BroadSoft-Xtended/Library-WebRTC-Core.git",
+    "webrtc-sound": "BroadSoft-Xtended/Library-WebRTC-Sound.git",
     "templatizer": "1.2.1",
     "mocha": "2.1.0",
     "jsdom": "3.1.0",
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@git.broadsoftlabs.net:7922/wrtc/fullscreen.git"
+    "url": "ssh://git@github.com:BroadSoft-Xtended/Library-WebRTC-FullScreen.git"
   },
   "author": "Dominik Steiner",
   "license": "ISC"
